完成省份宽度布局

--- a/myyhd.html
+++ b/myyhd.html
@@ -122,7 +122,6 @@
                 border-bottom-color: #dcdcdc;
                 border-bottom-width: 1px;
                 padding-bottom: 2px;
-                padding-left: 75px;
             }
 
             #id-hot-province button {
@@ -147,6 +146,10 @@
             .provinces button:hover {
                 background-color: #fb8c2d;
                 cursor: pointer;
+            }
+
+            td div {
+                width: 48px;
             }
 
             .dropdown {
@@ -190,77 +193,227 @@
                 <div class="table-container dropdown-content">
                     <table id="id-hot-province">
                         <tr>
-                            <th>热门省市</th>
-                            <td><button type="button" name="button">上海</button></td>
-                            <td><button type="button" name="button">北京</button></td>
-                            <td><button type="button" name="button">广东</button></td>
-                            <td><button type="button" name="button">湖北</button></td>
-                            <td><button type="button" name="button">四川</button></td>
+                            <th>
+                                <div class="">
+                                    热门省市
+                                </div>
+                            </th>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">上海</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">北京</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">广东</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">湖北</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">四川</button>
+                                </div>
+                            </td>
                         </tr>
                     </table>
                     <table class="provinces">
                         <tr>
-                            <td>华北：</td>
-                            <td><button type="button" name="button">北京</button></td>
-                            <td><button type="button" name="button">天津</button></td>
-                            <td><button type="button" name="button">河北</button></td>
-                            <td><button type="button" name="button">山西</button></td>
-                            <td><button type="button" name="button">内蒙古</button></td>
+                            <td>
+                                <div class="">
+                                    华北:
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <button type="button" name="button">北京</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <button type="button" name="button">天津</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <button type="button" name="button">河北</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <button type="button" name="button">山西</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div>
+                                    <button type="button" name="button">内蒙古</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
-                            <td>华东：</td>
-                            <td><button type="button" name="button">上海</button></td>
-                            <td><button type="button" name="button">江苏</button></td>
-                            <td><button type="button" name="button">浙江</button></td>
-                            <td><button type="button" name="button">安徽</button></td>
-                            <td><button type="button" name="button">福建</button></td>
-                            <td><button type="button" name="button">山东</button></td>
+                            <td>
+                                <div class="">
+                                    华东：
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">上海</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">江苏</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">浙江</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">安徽</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">福建</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">山东</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
-                            <td>华南：</td>
-                            <td><button type="button" name="button">广东</button></td>
-                            <td><button type="button" name="button">广西</button></td>
-                            <td><button type="button" name="button">海南</button></td>
+                            <td>
+                                <div class="">
+                                    华南：
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">广东</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">广西</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">海南</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
-                            <td>西南：</td>
-                            <td><button type="button" name="button">重庆</button></td>
-                            <td><button type="button" name="button">四川</button></td>
-                            <td><button type="button" name="button">贵州</button></td>
-                            <td><button type="button" name="button">云南</button></td>
-                            <td><button type="button" name="button">西藏</button></td>
+                            <td>
+                                <div class="">
+                                    西南：
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">重庆</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">四川</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">贵州</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">云南</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">西藏</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
-                            <td>西北：</td>
-                            <td><button type="button" name="button">陕西</button></td>
-                            <td><button type="button" name="button">甘肃</button></td>
-                            <td><button type="button" name="button">青海</button></td>
-                            <td><button type="button" name="button">宁夏</button></td>
-                            <td><button type="button" name="button">新疆</button></td>
+                            <td>
+                                <div class="">
+                                    西北：
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">陕西</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">甘肃</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">青海</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">宁夏</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">新疆</button>
+                                </div>
+                            </td>
                         </tr>
                         <tr>
-                            <td>东北：</td>
-                            <td><button type="button" name="button">辽宁</button></td>
-                            <td><button type="button" name="button">吉林</button></td>
-                            <td><button type="button" name="button">黑龙江</button></td>
+                            <td>
+                                <div class="">
+                                    东北：
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">辽宁</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">吉林</button>
+                                </div>
+                            </td>
+                            <td>
+                                <div class="">
+                                    <button type="button" name="button">黑龙江</button>
+                                </div>
+                            </td>
                         </tr>
                     </table>
                 </div>
             </div>
-            <!-- <div class="menu-container">
+            <div class="menu-container">
                 <span>我的 1 号店</span>
-                <dl>
-                    <dt>CSS</dt>
-                    <dd>CSS概念</dd>
-                    <dd>CSS应用</dd>
-                    <dd>CSS hacks</dd>
-                </dl>
                 <span>收藏夹</span>
                 <span>掌上 1 号店</span>
                 <span>客户服务</span>
                 <span>网站导航</span>
                 <span>关注我们：</span>
-            </div> -->
+            </div>
         </header>
 
         <script type="text/javascript">
