完成收藏夹 hover 布局

--- a/myyhd.html
+++ b/myyhd.html
@@ -169,7 +169,7 @@
 
             .menu-container {
                 display: inline-block;
-                margin-left: 700px;
+                margin-left: 30%;
             }
 
             .menu-container div {
@@ -188,6 +188,10 @@
 
             .my-collector {
                 position: absolute;
+            }
+
+            .my-collector span {
+                padding: 0px 10px;
             }
 
             .mobile-yhd {
