添加掌上一号店功能

--- a/myyhd.html
+++ b/myyhd.html
@@ -53,7 +53,7 @@
             }
 
             .my-vip {
-                position: absolute;*/
+                position: absolute;
                 border-radius: 20px;
                 border-width: 1px;
                 background-color: white;
@@ -188,6 +188,7 @@
 
             .my-collector {
                 position: absolute;
+                top: 10px;
             }
 
             .my-collector span {
@@ -195,8 +196,32 @@
             }
 
             .mobile-yhd {
-                margin-left: 40px;
+                margin-left: 45px;
             }
+
+            .mobile-yhd span {
+                padding: 0px 10px;
+            }
+
+            .mobile-yhd div {
+                position: absolute;
+                padding-top: 40px;
+            }
+
+            .mobile-yhd-list {
+                position: relative;
+                top: -100px;
+            }
+            /*.mobile-yhd div p {
+                display: inline;
+                font-size: 150%;
+                padding-left: 15px;
+                font-weight: bold;
+                position: relative;
+                top: -70px;
+            }*/
+
+
 
         </style>
     </head>
@@ -455,6 +480,23 @@
                 </div>
                 <div class="mobile-yhd">
                     <span>掌上 1 号店</span>
+                    <div>
+                        <img src="image/qrcode.png" alt="">
+                        <dl class="mobile-yhd-list">
+                            <dt>掌上 1 号店</dt>
+                            <dt><a href="#">手机购物更优惠</a></dt>
+                            <dt>
+                                <img src="image/apple.png" alt="">
+                                <img src="image/android.png" alt="">
+                                <img src="image/phone.png" alt="">
+                            </dt>
+                        </dl>
+                        <!-- <p>掌上 1 号店</p>
+                        <a href="#">手机购物更优惠</a>
+                        <img src="image/apple.png" alt="">
+                        <img src="image/android.png" alt="">
+                        <img src="image/phone.png" alt=""> -->
+                    </div>
                 </div>
                 <div class="">
                     <span>客户服务</span>
