正在做掌上一号店

--- a/myyhd.html
+++ b/myyhd.html
@@ -181,7 +181,6 @@
             }
 
             .menu-container dl {
-                position: absolute;
                 margin: 0px;
                 padding-top: 15px;
             }
@@ -478,9 +477,9 @@
                         <dt>店铺收藏</dt>
                     </dl>
                 </div>
-                <div class="mobile-yhd">
+                <div class="mobile-yhd dropdown">
                     <span>掌上 1 号店</span>
-                    <div>
+                    <div class="dropdown-content">
                         <img src="image/qrcode.png" alt="">
                         <dl class="mobile-yhd-list">
                             <dt>掌上 1 号店</dt>
