完成客户服务

--- a/myyhd.html
+++ b/myyhd.html
@@ -167,60 +167,43 @@
                 display: block;
             }
 
-            .menu-container {
-                display: inline-block;
-                margin-left: 30%;
-            }
-
-            .menu-container div {
-                display: inline;
-            }
-
             .my-yhd {
-                display: inline;
+                margin-top: 0px;
+                padding-top: 12px;
             }
 
-            .menu-container dl {
-                margin: 0px;
-                padding-top: 15px;
+            .my-collector-list {
+                margin-top: 0px;
+                padding-top: 12px;
             }
 
-            .my-collector {
+            .mobile-yhd-list {
+                padding-top: 12px;
+                width: 200px;
+            }
+
+            .mobile-yhd-list dl {
                 position: absolute;
-                top: 10px;
+                top: 12px;
+                padding-left: 100px;
+            }
+
+            .custom-services {
+                margin-top: 0px;
+                padding-top: 12px;
+            }
+
+            .custom-services dl {
+                width: 65px;
             }
 
             .my-collector span {
                 padding: 0px 10px;
             }
 
-            .mobile-yhd {
-                margin-left: 45px;
-            }
-
-            .mobile-yhd span {
-                padding: 0px 10px;
-            }
-
-            .mobile-yhd div {
-                position: absolute;
-                padding-top: 40px;
-            }
-
-            .mobile-yhd-list {
-                position: relative;
-                top: -100px;
-            }
-            /*.mobile-yhd div p {
+            header div {
                 display: inline;
-                font-size: 150%;
-                padding-left: 15px;
-                font-weight: bold;
-                position: relative;
-                top: -70px;
-            }*/
-
-
+            }
 
         </style>
     </head>
@@ -458,54 +441,53 @@
                     </table>
                 </div>
             </div>
-            <div class="menu-container">
-                <div class="my-yhd dropdown">
-                    <span>我的 1 号店</span>
-                    <dl class="dropdown-content">
-                        <dt>我的订单</dt>
-                        <dt>我的积分</dt>
-                        <dt>我的红包</dt>
-                        <dt>我的抵用券</dt>
-                        <dt>我的评论</dt>
-                        <dt>会员专享</dt>
+            <div class="dropdown">
+                <span>我的 1 号店</span>
+                <dl class="my-yhd dropdown-content">
+                    <dt>我的订单</dt>
+                    <dt>我的积分</dt>
+                    <dt>我的红包</dt>
+                    <dt>我的抵用券</dt>
+                    <dt>我的评论</dt>
+                    <dt>会员专享</dt>
+                </dl>
+            </div>
+            <div class="my-collector dropdown">
+                <span>收藏夹</span>
+                <dl class="my-collector-list dropdown-content">
+                    <dt>商品收藏</dt>
+                    <dt>店铺收藏</dt>
+                </dl>
+            </div>
+            <div class="dropdown">
+                <span>掌上 1 号店</span>
+                <div class="mobile-yhd-list dropdown-content">
+                    <img src="image/qrcode.png" alt="">
+                    <dl>
+                        <dt>掌上 1 号店</dt>
+                        <dt><a href="#">手机购物更优惠</a></dt>
+                        <dt>
+                            <img src="image/apple.png" alt="">
+                            <img src="image/android.png" alt="">
+                            <img src="image/phone.png" alt="">
+                        </dt>
                     </dl>
                 </div>
-                <div class="my-collector dropdown">
-                    <span>收藏夹</span>
-                    <dl class="dropdown-content">
-                        <dt>商品收藏</dt>
-                        <dt>店铺收藏</dt>
-                    </dl>
-                </div>
-                <div class="mobile-yhd dropdown">
-                    <span>掌上 1 号店</span>
-                    <div class="dropdown-content">
-                        <img src="image/qrcode.png" alt="">
-                        <dl class="mobile-yhd-list">
-                            <dt>掌上 1 号店</dt>
-                            <dt><a href="#">手机购物更优惠</a></dt>
-                            <dt>
-                                <img src="image/apple.png" alt="">
-                                <img src="image/android.png" alt="">
-                                <img src="image/phone.png" alt="">
-                            </dt>
-                        </dl>
-                        <!-- <p>掌上 1 号店</p>
-                        <a href="#">手机购物更优惠</a>
-                        <img src="image/apple.png" alt="">
-                        <img src="image/android.png" alt="">
-                        <img src="image/phone.png" alt=""> -->
-                    </div>
-                </div>
-                <div class="">
-                    <span>客户服务</span>
-                </div>
-                <div class="">
-                    <span>网站导航</span>
-                </div>
-                <div class="">
-                    <span>关注我们：</span>
-                </div>
+            </div>
+            <div class="custom-services dropdown">
+                <span>客户服务</span>
+                <dl class="dropdown-content">
+                    <dt>包裹跟踪</dt>
+                    <dt>常见问题</dt>
+                    <dt>在线退换货</dt>
+                    <dt>配送范围</dt>
+                </dl>
+            </div>
+            <div class="">
+                <span>网站导航</span>
+            </div>
+            <div class="">
+                <span>关注我们：</span>
             </div>
         </header>
 
