--- a/text.html
+++ b/text.html
@@ -28,5 +28,26 @@
             <p>content</p>
           </div>
         </div>
+
+        <div class="mobile-yhd dropdown">
+            <span>掌上 1 号店</span>
+            <div class="dropdown-content">
+                <img src="image/qrcode.png" alt="">
+                <dl class="mobile-yhd-list">
+                    <dt>掌上 1 号店</dt>
+                    <dt><a href="#">手机购物更优惠</a></dt>
+                    <dt>
+                        <img src="image/apple.png" alt="">
+                        <img src="image/android.png" alt="">
+                        <img src="image/phone.png" alt="">
+                    </dt>
+                </dl>
+                <!-- <p>掌上 1 号店</p>
+                <a href="#">手机购物更优惠</a>
+                <img src="image/apple.png" alt="">
+                <img src="image/android.png" alt="">
+                <img src="image/phone.png" alt=""> -->
+            </div>
+        </div>
     </body>
 </html>
