修改登录注册面板问题

--- a/myyhd.html
+++ b/myyhd.html
@@ -101,6 +101,18 @@
                 border-top: none;
             }
 
+            header div {
+                display: inline;
+            }
+
+            .info-container {
+                display: block;
+            }
+
+            .credits-container {
+                display: block;
+            }
+            
             .display-info {
                 display: none;
             }
@@ -199,10 +211,6 @@
 
             .my-collector span {
                 padding: 0px 10px;
-            }
-
-            header div {
-                display: inline;
             }
 
         </style>
