完成网站导航

--- a/myyhd.html
+++ b/myyhd.html
@@ -112,7 +112,7 @@
             .credits-container {
                 display: block;
             }
-            
+
             .display-info {
                 display: none;
             }
@@ -211,6 +211,17 @@
 
             .my-collector span {
                 padding: 0px 10px;
+            }
+
+            .site-nav-p {
+                margin: 0px;
+                padding-left: 3px;
+            }
+
+            .site-sub-container {
+                position: absolute;
+                padding-top: 15px;
+                width: 300px;
             }
 
         </style>
@@ -491,8 +502,26 @@
                     <dt>配送范围</dt>
                 </dl>
             </div>
-            <div class="">
+            <div class="site-nav dropdown">
                 <span>网站导航</span>
+                <div class="site-sub-container dropdown-content">
+                    <p class="site-nav-p">1 号商城</p>
+                    <table class="site-nav-table">
+                        <tr>
+                            <td>1 号社区</td>
+                            <td>0 元试用</td>
+                            <td>平安金卡</td>
+                            <td>分销平台</td>
+                        </tr>
+                    </table>
+                    <table class="site-nav-table">
+                        <tr>
+                            <td>网站联盟</td>
+                            <td>招商通道</td>
+                            <td>企业采购</td>
+                        </tr>
+                    </table>
+                </div>
             </div>
             <div class="">
                 <span>关注我们：</span>
