--- a/myyhd.html
+++ b/myyhd.html
@@ -224,6 +224,9 @@
                 width: 300px;
             }
 
+            .my-yhd {
+                margin-left: 600px;
+            }
         </style>
     </head>
     <body>
@@ -460,7 +463,7 @@
                     </table>
                 </div>
             </div>
-            <div class="dropdown">
+            <div class="my-yhd dropdown">
                 <span>我的 1 号店</span>
                 <dl class="my-yhd dropdown-content">
                     <dt>我的订单</dt>
