--- a/myyhd.html
+++ b/myyhd.html
@@ -224,7 +224,7 @@
                 width: 300px;
             }
 
-            .my-yhd {
+            .my-yhd-container {
                 margin-left: 600px;
             }
         </style>
@@ -463,7 +463,7 @@
                     </table>
                 </div>
             </div>
-            <div class="my-yhd dropdown">
+            <div class="my-yhd-container dropdown">
                 <span>我的 1 号店</span>
                 <dl class="my-yhd dropdown-content">
                     <dt>我的订单</dt>
@@ -530,6 +530,9 @@
                 <span>关注我们：</span>
             </div>
         </header>
+        <section>
+            <a href="#"><img src="" alt=""></a>
+        </section>
 
         <script type="text/javascript">
            var log = function() {
