添加购物车按钮

--- a/myyhd.html
+++ b/myyhd.html
@@ -576,6 +576,7 @@
                 <button class="search-button" type="button" name="button">商品</button>
                 <input class="search-field" type="field" name="" value="">
                 <button class="search-submit" type="submit" name="button">搜索</button>
+                <button type="button" name="button">购物车</button>
             </span>
         </section>
 
