--- a/myyhd.html
+++ b/myyhd.html
@@ -267,6 +267,47 @@
                 position: relative;
                 top: -25px;
             }
+
+            .cart {
+                left: 300px;
+                background-color: #f5f5f5;
+                padding: 15px 20px;
+                border: solid 1px #bbbaba;
+            }
+
+            .cart:hover {
+                background-color: white;
+                border-bottom: white;
+            }
+
+            .cart > img {
+                margin-bottom: -11px;
+                margin-top: -5px;
+            }
+
+            .cart-img {
+                margin-bottom: -10px;
+            }
+
+            .cart > button {
+                border: none;
+                background-color: #f5f5f5;
+                font-size: 130%;
+            }
+
+            .cart > button:hover {
+                background-color: white;
+            }
+
+            .empty-cart {
+                font-size: small;
+                text-align: center;
+                width: 250px;
+                top: 60px;
+                right: -1px;
+                padding: 60px 80px;
+                border: solid 1px #bbbaba;
+            }
         </style>
     </head>
     <body>
@@ -576,8 +617,16 @@
                 <button class="search-button" type="button" name="button">商品</button>
                 <input class="search-field" type="field" name="" value="">
                 <button class="search-submit" type="submit" name="button">搜索</button>
-                <button type="button" name="button">购物车</button>
             </span>
+            <div class="cart dropdown">
+                <button type="button" name="button"><img class="cart-img" src="image/cart.png" alt="" />购物车</button>
+                <div class="empty-cart dropdown-content">
+                    <img src="image/emptyCart.png" alt="" />
+                    <p>
+                        您的购物车里还没有1号店的商品哦~~
+                    </p>
+                </div>
+            </div>
         </section>
 
         <script type="text/javascript">
