--- a/text.html
+++ b/text.html
@@ -29,25 +29,15 @@
           </div>
         </div>
 
-        <div class="mobile-yhd dropdown">
-            <span>掌上 1 号店</span>
-            <div class="dropdown-content">
-                <img src="image/qrcode.png" alt="">
-                <dl class="mobile-yhd-list">
-                    <dt>掌上 1 号店</dt>
-                    <dt><a href="#">手机购物更优惠</a></dt>
-                    <dt>
-                        <img src="image/apple.png" alt="">
-                        <img src="image/android.png" alt="">
-                        <img src="image/phone.png" alt="">
-                    </dt>
-                </dl>
-                <!-- <p>掌上 1 号店</p>
-                <a href="#">手机购物更优惠</a>
-                <img src="image/apple.png" alt="">
-                <img src="image/android.png" alt="">
-                <img src="image/phone.png" alt=""> -->
+        <div class="">
+            <button class="cart dropdown" type="button" name="button"><img class="cart-img" src="image/cart.png" alt="" />购物车</button>
+            <div class="cart-container dropdown-content">
+                <img src="image/emptyCart.png" alt="" />
+                <p>
+                    您的购物车里还没有1号店的商品哦~~
+                </p>
             </div>
         </div>
+
     </body>
 </html>
