--- a/myyhd.html
+++ b/myyhd.html
@@ -629,6 +629,20 @@
             </div>
         </section>
 
+        <section>
+            <div class="slice-images">
+                <img src="image/slide0.jpg" alt="" />
+                <img src="image/slide1.jpg" alt="" />
+                <img src="image/slide2.jpg" alt="" />
+                <img src="image/slide3.jpg" alt="" />
+                <img src="image/slide4.jpg" alt="" />
+                <img src="image/slide5.jpg" alt="" />
+                <img src="image/slide6.jpg" alt="" />
+                <img src="image/slide7.jpg" alt="" />
+                <img src="image/slide8.jpg" alt="" />
+            </div>
+        </section>
+
         <script type="text/javascript">
            var log = function() {
                console.log.apply(console, arguments);
